--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,13 @@ services:
   geth:
     container_name: geth
     build: geth
-    command: '--identity "yourNodeName" --networkid 2017042099 --datadir "/root/.ethereum/devchain" --unlock 0 --password /root/.ethereum/devchain/pw --port "30303" --rpc --rpcport "8540" --rpccorsdomain "*" --rpcaddr="0.0.0.0" --rpcapi "admin,db,eth,miner,net,web3,personal,txpool" --nodiscover --minerthreads=2  --etherbase 0 --fast --mine'
+    command: '--identity ${USER} --networkid 2017042099 --datadir "/root/.ethereum/devchain" --unlock 0 --password /root/.ethereum/devchain/pw --port "30303" --rpc --rpcport "8544" --rpccorsdomain "*" --rpcaddr="0.0.0.0" --rpcapi "admin,db,eth,miner,net,web3,personal,txpool" --nodiscover --minerthreads=2  --etherbase 0'
+    # --fast --mine'
     ports:    
-      - "8540:8540"
+      - "8544:8544"
       - "30303:30303"
       - "30303:30303/udp"
-    volumes: # blochain, wallet will be store here on your host/vm
+    volumes: # blockchain + wallet will be store here on your host/vm
       - geth:/root/.ethereum
 
   truffle:
@@ -21,28 +22,28 @@ services:
     entrypoint: sh
     command: '-c "sleep 1d"'
 
-  testrpc:
+  testrpc: # A very simple/light geth, only for testing purpose
     container_name: testrpc
     image: desmart/testrpc:latest
     ports:
       - 8545:8545
 
-  netstatsapi: # to send geth data to remote dashboard
+  netstatsapi: # Collect geth data and send them to remote dashboard (netstatsfront)
     container_name: netstatsapi
     image: enettet/ethereum-netstats-api
     environment:
       - WS_SERVER=ws://factory.shinit.net:15000
       - WS_SECRET=20170420devchain
       - RPC_HOST=geth
-      - RPC_PORT=8540
-      - INSTANCE_NAME=yourNodeName_node
+      - RPC_PORT=8545
+      - INSTANCE_NAME=${USER}_node
       - CONTACT_DETAILS=
       - NODE_ENV=private
       - LISTENING_PORT=30303
       - VERBOSITY=3
 
-  #netstatsfront: # To display our dashboard locally
-    container_name: netstatsfront
+  #netstatsfront: # To display our dashboard locally (in our case, it is already deployed on http://factory.shinit.net:15000)
+    #container_name: netstatsfront
     #build: netstats-front
     #environment:
       #- WS_SECRET=20170420devchain
