--- a/vagrantfile
+++ b/vagrantfile
@@ -5,6 +5,7 @@ $script = <<SCRIPT
 sudo apt-get -y update
 sudo apt-get -y upgrade
 sudo apt-get install -y net-tools nmap
+sudo apt-get install -y python3 python3-pip && pip3 install web3
 SCRIPT
 
 Vagrant.configure("2") do |config|
@@ -25,7 +26,7 @@ Vagrant.configure("2") do |config|
   #Install docker-compose
   config.vm.provision "shell", inline: <<-EOC
     test -e /usr/local/bin/docker-compose || \\
-    curl -sSL https://github.com/docker/compose/releases/download/1.14.0/docker-compose-`uname -s`-`uname -m` \\
+    curl -sSL https://github.com/docker/compose/releases/download/1.15.0/docker-compose-`uname -s`-`uname -m` \\
       | sudo tee /usr/local/bin/docker-compose > /dev/null
     sudo chmod +x /usr/local/bin/docker-compose
     test -e /etc/bash_completion.d/docker-compose || \\
