--- a/vagrantfile
+++ b/vagrantfile
@@ -7,6 +7,7 @@ sudo apt-get -y upgrade
 sudo apt-get -y update
 sudo apt-get install -y net-tools nmap jq
 sudo apt-get install -y python3 python3-pip && pip3 install web3
+sudo usermod -aG docker ${USER}
 SCRIPT
 
 Vagrant.configure("2") do |config|
