--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "8544:8544"
       - "30303:30303"
       - "30303:30303/udp"
-    volumes: # blockchain + wallet will be store here on your host/vm
+    volumes: # blockchain + wallet will be stored here on your host
       - geth:/root/.ethereum
 
   truffle:
@@ -33,26 +33,24 @@ services:
     image: enettet/ethereum-netstats-api
     environment:
       - WS_SERVER=ws://factory.shinit.net:15000
+      #- WS_SERVER=netstatsfront:3000 
       - WS_SECRET=20170420devchain
       - RPC_HOST=geth
-      - RPC_PORT=8545
+      - RPC_PORT=8544
       - INSTANCE_NAME=${GETH_NODE}_node
       - CONTACT_DETAILS=
       - NODE_ENV=private
       - LISTENING_PORT=30303
       - VERBOSITY=3
 
-  #netstatsfront: # To display our dashboard locally (in our case, it is already deployed on http://factory.shinit.net:15000)
-    #container_name: netstatsfront
-    #build: netstats-front
-    #environment:
-      #- WS_SECRET=20170420devchain
-      #- NODE_ENV=private
-    #image: canchain/docker-eth-netstats
-    #ports:
-      #- 3000:3000 
-    #entrypoint: sh
-    #command: '-c "sleep 1d"'
+  # netstatsfront: # To display our dashboard locally (in our case, dashboard is already running on http://factory.shinit.net:15000)
+  #   container_name: netstatsfront
+  #   build: netstats-front
+  #   environment:
+  #     - WS_SECRET=20170420devchain
+  #     - NODE_ENV=private
+  #   ports:
+  #     - 3000:3000 
 
 volumes:
   geth:
