--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,7 @@ services:
   geth:
     container_name: geth
     build: geth
-    command: '--identity ${GETH_NODE} --networkid 2017042099 --datadir "/root/.ethereum/devchain" --unlock 0,1 --password /root/.ethereum/devchain/pw --port "30303" --rpc --rpcport "8544" --rpccorsdomain "*" --rpcaddr="0.0.0.0" --rpcapi "admin,db,eth,miner,net,web3,personal,txpool" --nodiscover --minerthreads=2  --etherbase 0'
-    # --fast --mine'
+    command: '--identity ${GETH_NODE} --networkid 2017042099 --datadir "/root/.ethereum/devchain" --unlock 0,1 --password /root/.ethereum/devchain/pw --port "30303" --rpc --rpcport "8544" --rpccorsdomain "*" --rpcaddr="0.0.0.0" --rpcapi "admin,db,eth,miner,net,web3,personal,txpool" --nodiscover --minerthreads=2  --etherbase 0 --fast --mine'
     ports:    
       - "8544:8544"
       - "30303:30303"
@@ -44,10 +43,11 @@ services:
 
   netstatsapi: # Collect geth data and send them to remote dashboard (netstatsfront)
     container_name: netstatsapi
-    image: enettet/ethereum-netstats-api
+    image: serbrech/ethnetintel
+    depends_on:
+      - geth
     environment:
-      - WS_SERVER=ws://factory.shinit.net:15000
-      #- WS_SERVER=netstatsfront:3000 
+      - WS_SERVER=netstatsfront:3000 
       - WS_SECRET=20170420devchain
       - RPC_HOST=geth
       - RPC_PORT=8544
@@ -55,16 +55,16 @@ services:
       - CONTACT_DETAILS=
       - NODE_ENV=private
       - LISTENING_PORT=30303
-      - VERBOSITY=3
+      - VERBOSITY=2
 
-  # netstatsfront: # To display our dashboard locally (in our case, dashboard is already running on http://factory.shinit.net:15000)
-  #   container_name: netstatsfront
-  #   build: netstats-front
-  #   environment:
-  #     - WS_SECRET=20170420devchain
-  #     - NODE_ENV=private
-  #   ports:
-  #     - 3000:3000 
+  netstatsfront: # To display our dashboard locally (in our case, dashboard is already running on http://factory.shinit.net:15000)
+    container_name: netstatsfront
+    build: netstats-front
+    environment:
+      - WS_SECRET=20170420devchain
+      - NODE_ENV=private
+    ports:
+      - 3000:3000 
 
 volumes:
   geth:
