--- a/netstats-front/Dockerfile
+++ b/netstats-front/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.6
 
 RUN apk add --no-cache git nodejs nodejs-npm 
-RUN npm install --silent -g grunt-cli
+RUN npm set strict-ssl false && npm install --silent -g grunt-cli
 
 RUN git clone https://github.com/EthereumEx/eth-netstats.git /var/lib/eth-netstats
 
